# qt_samp_01

./: CMakeLists.txt  GStreamerGrabber.cpp  GStreamerGrabber.h  README.md  VideoItem.cpp  VideoItem.h  VideoRenderer.cpp  VideoRenderer.h  main.cpp
log/: 0409_01.txt  0409_02.txt
qml/: main.qml
